; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/parisc/extr_ccio-dma.c_ccio_get_iommu.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/parisc/extr_ccio-dma.c_ccio_get_iommu.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.parisc_device = type { i32 }

@HPHW_IOA = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @ccio_get_iommu(%struct.parisc_device* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.parisc_device*, align 8
  store %struct.parisc_device* %0, %struct.parisc_device** %3, align 8
  %4 = load %struct.parisc_device*, %struct.parisc_device** %3, align 8
  %5 = load i32, i32* @HPHW_IOA, align 4
  %6 = call %struct.parisc_device* @find_pa_parent_type(%struct.parisc_device* %4, i32 %5)
  store %struct.parisc_device* %6, %struct.parisc_device** %3, align 8
  %7 = load %struct.parisc_device*, %struct.parisc_device** %3, align 8
  %8 = icmp ne %struct.parisc_device* %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  store i8* null, i8** %2, align 8
  br label %15

10:                                               ; preds = %1
  %11 = load %struct.parisc_device*, %struct.parisc_device** %3, align 8
  %12 = getelementptr inbounds %struct.parisc_device, %struct.parisc_device* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i8* @ccio_find_ioc(i32 %13)
  store i8* %14, i8** %2, align 8
  br label %15

15:                                               ; preds = %10, %9
  %16 = load i8*, i8** %2, align 8
  ret i8* %16
}

declare dso_local %struct.parisc_device* @find_pa_parent_type(%struct.parisc_device*, i32) #1

declare dso_local i8* @ccio_find_ioc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
